@@ -39,6 +39,7 @@ Changes since 5.0 release
 * FIX tkcanvas terminal handling of blank (default) font family name
 * FIX off-by-one-error in color of contours when hidden3d is active
 * FIX adjust WIN32 encoding used by text output from "pause" command
+* FIX qt terminal 3D rotation mode tendency to get stuck "on"
 
 Changes in final release of 5.0
 ===============================
